# side

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
backend/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py  classification_agent.py  duplicate_detection_agent.py  feedback_cleaner_agent.py  feedback_collector_agent.py  fetch_agent.py  insight_agent.py  memory_agent.py  priority_agent.py  response_draft_agent.py  routing_agent.py  search_agent.py  sentiment_agent.py  severity_agent.py  ticket_generation_agent.py
backend/app/config/: settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py  security.py
backend/app/docs/: __init__.py  api_reference.py
backend/app/events/: __init__.py  event_bus.py  event_types.py
backend/app/graphs/: __init__.py  feedback_graph.py  insight_graph.py
backend/app/integrations/: __init__.py  cognee_integration.py  discord_integration.py  firebase_integration.py  gemini_integration.py  github_integration.py  gmail_integration.py  groq_integration.py  llm_provider.py  smtp_integration.py  telegram_integration.py  tinyfish_integration.py  webhook_receiver.py
backend/app/memory/: __init__.py  cognee_manager.py
backend/app/middleware/: __init__.py  cors.py  error_handler.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  agent.py  feedback.py  ticket.py
backend/app/prompts/: __init__.py  classification_prompt.py  sentiment_prompt.py  ticket_generation_prompt.py
backend/app/repositories/: __init__.py  activity_log_repository.py  agent_run_repository.py  analytics_repository.py  base_repository.py  customer_repository.py  daily_report_repository.py  duplicate_cluster_repository.py  feedback_repository.py  firebase_client.py  integration_repository.py  memory_repository.py  message_repository.py  (+5 more)
(+435 files in other folders)
